2001-06-26  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/rpf/utils.c: implemented vrf_fopen_ci() for case 
	insensitive access to files.

2001-06-25  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: swq.c, vrfswq.c

	Added WIN32 redifinition of strcasecmp() to stricmp().

	* ogdi/driver/adrg/adrg.c:Made cleanup safer if verifyLocation() fails.

2001-06-23  Frank Warmerdam  <warmerdam@pobox.com>

	* NEWS: added file.

	* ogdi/driver/adrg: adrg.c, adrg.h

	Added capabilities support.  Cache layer list when opening datastore.

2001-06-22  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: enabled RGB support.

	* ogdi/driver/adrg/ddadrg.tcl

	new, came from DND.

	* ogdi/driver/adrg: adrg.c, object.c, utils.c, adrg.h

	Incorporated Image support from DND, added standard headers.

	* ogdi/include/ecs_util.h: Fixed typo in ECS_SETGEOMIMAGEVALUE().

2001-06-21  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: added ECS_CVSID to all source files.

2001-06-20  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: vrf.c, swq.c, swq.h, vrf.h, makefile

	Added full implementation of restricted_where support based on SWQ. 
	This adds brackets to expressions. 

2001-06-13  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/*: Updated source headers.

	* ogdi/c-api/ecs_capabililties.c, ogdi/driver/dted/dted.c, 
	ogdi/driver/vrf/util.c, ogdi/driver/rpf/rpf.c: Fixed capabilities
	to match 6.2 spec (BoundingBox, resx, resy, LatLongBoundingBox). 

2001-05-30  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: utilize layer capabitilies if 
	available to set region and resolution.

	* ogdi/drivers/rpf/rpf.c: Modified capabilities returned to have real
	information about each layer instead of just dummy global bounds info.

2001-05-04  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/gdal: added contributed GDAL raster server.
